==> zhouF96/icm20689_esp32/Invn/system.cpp <==
#include "stdint.h"
#include "Devices/Drivers/Icm20789-DMP/Icm20789.h"
#include "Invpres.h"
#include "Devices/SensorTypes.h"
#include "Devices/SensorConfig.h"
#include "EmbUtils/InvScheduler.h"
#include "EmbUtils/RingByteBuffer.h"
#include "EmbUtils/Message.h"
#include "EmbUtils/ErrorHelper.h"
#include "EmbUtils/DataConverter.h"
#include "EmbUtils/RingBuffer.h"
#include "DynamicProtocol/DynProtocol.h"
#include "DynamicProtocol/DynProtocolTransportUart.h"
#include "esp32-hal-gpio.h"
#include "system.h"
#include "Wire.h"
#include "SPI.h"

void ext_int_initialize(void (*handler_function)(void))
{
	///* Enable the peripheral clock for the MAG extension board interrupt pin. */
	//pmc_enable_periph_clk(ID_TC0);

	///* Configure PIOs as input pins. */
	//pio_configure(PIN_EXT_INTERRUPT_PIO, PIN_EXT_INTERRUPT_TYPE, PIN_EXT_INTERRUPT_MASK, PIN_EXT_INTERRUPT_ATTR);

	///* Initialize PIO interrupt handler, interrupt on rising edge. */
	//pio_handler_set(PIN_EXT_INTERRUPT_PIO, PIN_EXT_INTERRUPT_ID, PIN_EXT_INTERRUPT_MASK, 
	//					PIN_EXT_INTERRUPT_ATTR, (void (*) (uint32_t, uint32_t))handler_function);

	///* Initialize and enable push button (PIO) interrupt. */
	//pio_handler_set_priority(PIN_EXT_INTERRUPT_PIO, PIN_EXT_INTERRUPT_IRQn, 0);
	//pio_enable_interrupt(PIN_EXT_INTERRUPT_PIO, PIN_EXT_INTERRUPT_MASK);
	//pinMode(1, INPUT_PULLUP);
	attachInterrupt(1, handler_function, RISING);

}

unsigned long i2c_master_read_register(unsigned char Address, unsigned char RegisterAddr, unsigned short RegisterLen, unsigned char *RegisterValue)
{
	//twi_packet_t packet_read;

	if(Address == 0){
		Address = I2C_Address;	// Slave Address is 0x69 for on-board sensors, 0x68 for external sensors
	}
	
	//packet_read.chip = Address;
	//packet_read.addr[0] = RegisterAddr;
	//packet_read.addr_length = 1;
	//packet_read.buffer = RegisterValue;
	//packet_read.length = RegisterLen;
	//
	//if(twi_master_read((Twi*)BOARD_BASE_TWI, &packet_read) == TWI_SUCCESS){
	//	return TWI_SUCCESS;
	//}
	//return TWI_BUSY;
	//Serial.println("call wire read register");
	
	uint8_t error = 0;
	Wire.beginTransmission(Address);
	Wire.write(RegisterAddr);
	Wire.endTransmission(true);
	error = Wire.requestFrom((uint8_t)Address, (uint8_t)RegisterLen);
	Wire.readBytes(RegisterValue, error);
	//Serial.printf("register:%x RegisterValue: %x ,RegisterLen: %d ", RegisterAddr, *RegisterValue, RegisterLen);
	//Wire.endTransmission();
	return 0;
}

unsigned long i2c_master_write_register(unsigned char Address, unsigned char RegisterAddr, unsigned short RegisterLen, const unsigned char *RegisterValue)
{
	//twi_packet_t packet_write;

	if(Address == 0){
		Address = I2C_Address; // Slave Address is 0x69 for on-board sensors, 0x68 for external sensors
	}
	//packet_write.chip = Address;
	//packet_write.addr[0] = RegisterAddr;
	//packet_write.addr_length = 1;
	//packet_write.buffer = (void *)RegisterValue;
	//packet_write.length = RegisterLen;

	//return twi_master_write((Twi*)BOARD_BASE_TWI, &packet_write);	
	//Serial.printf("call wire.write register register:%x", RegisterAddr);
	//Serial.println()
	//char s[200];
	//Serial.printf("register:%x RegisterValue: %x ,RegisterLen: %d ", RegisterAddr, *RegisterValue, RegisterLen);
	Wire.beginTransmission(Address);
	Wire.write(RegisterAddr);
	Wire.write(RegisterValue, RegisterLen);
	Wire.endTransmission();
	return 0;
	
}

static void spi_master_initialize(void)
{
	/* Enable the peripheral and set SPI mode. */
	SPI.begin(SCLKPIN, MISOPIN, MOSIPIN, chipSelectPin);
	//SPI.setHwCs(1);
	SPI.beginTransaction(SPISettings(1000000, SPI_MSBFIRST, SPI_MODE0));
	
	//SPI.setFrequency(6000000);

}

static int spi_master_transfer_tx(void * context, uint8_t register_addr, const uint8_t * value, uint32_t len)
{
	uint8_t reg	= register_addr; 
	const uint8_t *p_rbuf = value; 
	uint32_t rsize = len;
	uint32_t i;
	uint8_t uc_pcs = 0;
	uint16_t data = 0;
	
	reg &= WRITE_BIT_MASK;
	digitalWrite(chipSelectPin, 0);
	SPI.transferBytes(&reg, NULL, 1);
	SPI.transferBytes(p_rbuf, NULL, rsize);
	//SPI.transfer(reg);
	//data=SPI.transfer(0x0);
	//SPI.endTransaction();
	//spi_write(SPI_MASTER_BASE, reg, 0, 0); /* write cmd/reg-addr */
	//while ((spi_read_status(SPI_MASTER_BASE) & SPI_SR_TDRE) == 0); /* Wait transfer data reg done */
	//spi_read(SPI_MASTER_BASE, &data, &uc_pcs); /* dummy read */

	//for (i = 0; i < rsize; i++) {
		//SPI.transfer(p_rbuf[i]);
		//data=SPI.transfer(0x0);
		//SPI.endTransaction();
		//spi_write(SPI_MASTER_BASE, p_rbuf[i], 0, 0); /* dummy write to generate clock */
		//while ((spi_read_status(SPI_MASTER_BASE) & SPI_SR_TDRE) == 0); /* Wait transfer data reg done. */
		//spi_read(SPI_MASTER_BASE, &data, &uc_pcs); /* read actual register data */
	//}
	digitalWrite(chipSelectPin, 1);
	return 0;
}

static int spi_master_transfer_rx(void * context, uint8_t register_addr, uint8_t * value, uint32_t len)
{
	uint8_t reg	= register_addr; 
	uint8_t *p_rbuf	= value; 
	uint32_t rsize	= len;
	uint32_t i;
	uint8_t uc_pcs = 0;//SPI_CHIP_PCS;
	uint16_t data = 0;

	reg |= READ_BIT_MASK;
	digitalWrite(chipSelectPin, 0);
	//SPI.transfer(reg);
	SPI.transferBytes(&reg, NULL, 1);
	SPI.transferBytes(NULL, p_rbuf, len);
	//data= SPI.transfer(0x0);
	//SPI.endTransaction();
	//spi_write(SPI_MASTER_BASE, reg, 0, 0); /* write cmd/reg-addr */
	//while ((spi_read_status(SPI_MASTER_BASE) & SPI_SR_TDRE) == 0); /* Wait transfer data reg done */
	//spi_read(SPI_MASTER_BASE, &data, &uc_pcs); /* dummy read */

	//for (i = 0; i < rsize; i++) {
		//data = SPI.transfer(0x0);
		//p_rbuf[i] = (uint8_t)(data & 0xFF);
		//SPI.endTransaction();
		//spi_write(SPI_MASTER_BASE, 0x0, 0, 0); /* dummy write to generate clock */
		//while ((spi_read_status(SPI_MASTER_BASE) & SPI_SR_TDRE) == 0); /* Wait transfer data reg done. */
		//spi_read(SPI_MASTER_BASE, &data, &uc_pcs); /* read actual register data */
		//p_rbuf[i] = (uint8_t)(data & 0xFF);
	//}
	digitalWrite(chipSelectPin, 1);
	return 0;
}
